test/2/type/poly-unconstrained.err
test/2/type/poly-unconstrained.ploy:6:7-8: type error: method alias 'f': polyfunction cannot resolve against expected free type.
  polyfunction type: ()%Int + ()%Str
  expected type: ^0
|   g = f
        ~
